manifests/dev/infra/minio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      name: minio
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        imagePullPolicy: Always
        command: ["minio"]
        args: ["server", "/data"]
        volumeMounts:
        - name: data
          mountPath: /data
        ports:
        - name: service
          containerPort: 9000
        livenessProbe:
          tcpSocket:
            port: 9000
          timeoutSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-persistent-storage
      - name: minio-user
        secret:
          secretName: minio-user
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
