manifests/dev/infra/minio/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minio.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
